# BeamNG.drive-map-generator-v3

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-portable.yml
src/: aws_terrain.rs  beamng_export.rs  main.rs  model.rs  osm.rs  texture.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/src/: main.tsx
