[package]
name = "beamng-map-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
geojson = "0.24"
image = "0.25"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webbrowser = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
